@@ -95,18 +95,13 @@ function rcmail_message_attachments($attrib)
                         $attach_prop['filename'],
                         show_bytes($attach_prop['size']));
       else
-        $out .= sprintf('<li><a href="#attachment" onclick="return %s.command(\'load-attachment\',{part:\'%s\', mimetype:\'%s\'},this)">%s</a></li>'."\n",
+        $out .= sprintf('<li><a href="%s&_part=%s" onclick="return %s.command(\'load-attachment\',{part:\'%s\', mimetype:\'%s\'},this)">%s</a></li>'."\n",
+                        $GET_URL,
+                        $attach_prop['part_id'],
                         $JS_OBJECT_NAME,
                         $attach_prop['part_id'],
                         $attach_prop['mimetype'],
                         $attach_prop['filename']);
-    /* direct link
-      else
-        $out .= sprintf('<li><a href="%s&_part=%s&_frame=1" target="rcubemailattachment">%s</a></li>'."\n",
-                        $GET_URL,
-                        $attach_prop['part_id'],
-                        $attach_prop['filename']);
-    */
       }
 
     $out .= "</ul>";
